# chill

./: Cargo.toml
src/: attachment.rs  client.rs  design.rs  document.rs  error.rs  path.rs  revision.rs  view.rs
src/action/: create_database.rs  create_document.rs  delete_document.rs  execute_view.rs  mod.rs  read_document.rs  update_document.rs
src/testing/: fake_server.rs  mod.rs
src/transport/: mod.rs  testing.rs
tests/: actions.rs
