[package]
name = "chill"
version = "0.5.0"
authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Client-side CouchDB library"
repository = "https://github.com/chill-rs/chill"
documentation = "https://chill-rs.github.io/chill/doc/v0.3.0/chill/"
keywords = ["couchdb", "database", "nosql"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
regex = "1.4.1"
serde = "0.8"
serde_json = "0.8"
#serde = "1.0"
#serde_json = "1.0"
tempdir = "0.3"
url = "1"

[dependencies.mime]
version = "0.2"
features = ["serde"]

[dependencies.hyper]
version = "0.10"

[dependencies.uuid]
version = "0.5.1"
features = ["serde"]
